--- a/content/換行指令.md
+++ b/content/換行指令.md
@@ -1,7 +1,7 @@
 Title: Paragraphs 換行指令
 Date: 2017-09-23 22:23
 Category: HTML
-Tags: HTML , Paragraphs
+Tags: HTML
 Slug: Paragraphs
 Author: 40423222
 
