--- a/content/跑馬燈指令.md
+++ b/content/跑馬燈指令.md
@@ -1,7 +1,7 @@
 Title: ScrollingText 跑馬燈指令
 Date: 2017-09-23 22:31
 Category: HTML
-Tags: HTML , ScrollingText
+Tags: HTML
 Slug: ScrollingText
 Author: 40423222
 
