--- a/content/顯示程式指令.md
+++ b/content/顯示程式指令.md
@@ -1,7 +1,7 @@
 Title: ShowCode 顯示程式指令
 Date: 2017-09-23 22:32
 Category: HTML
-Tags: HTML , ShowCode
+Tags: HTML
 Slug: ShowCode
 Author: 40423222
 
