Update HTML_Tabel and Tags and ShowCode

--- a/content/HTML/顯示程式指令.md
+++ b/content/HTML/顯示程式指令.md
@@ -64,3 +64,22 @@ XMP 所產生的效果:
     1<br>2<p><marquee direction=left  bgcolor="#9999ff" behavior=alternate scrollamount=30 scrolldelay=100>嘿嘿！我是三號跑馬燈</marquee>
 </xmp>
 </pre>
+
+<hr>
+
+## \絕對顯示:
+使用這\符號,能顯示所有的特殊符號(包括xmp不能顯示的符號)<br>
+缺點: 不能顯示&lt;&gt;,指令不能顯示. 
+而且一個\符號,只能顯示一個特殊符號<br>
+例如: \*\*,*123*,\*456*,789*
+
+### 指令:
+<pre>
+<xmp>
+使用這\符號,能顯示所有的特殊符號(包括xmp不能顯示的符號)<br>
+缺點: 不能顯示&lt;&gt;,指令不能顯示.
+而且一個\符號指能顯示一個特殊符號<br>
+例如: \\\*\\\*,\*123\*,\\*456\*,789\*
+在這多家很多\,防止\*符號被啟用
+</xmp>
+</pre>
